--- a/templates/menu.html
+++ b/templates/menu.html
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="/">
-          Home
+          Home Page
         </a>
       </div>
     </div>
